--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="skkk.admin.com.dakai_station">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!--闪屏页面-->
+        <!-- 闪屏页面 -->
         <activity
             android:name="activity.HomeActivity"
             android:label="@string/app_name"
@@ -21,11 +22,12 @@
             </intent-filter>
         </activity>
 
-        <!--主页面-->
+        <!-- 主页面 -->
         <activity
             android:name="activity.SplashActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-    </application>
+            android:theme="@style/AppTheme.NoActionBar" />
 
+        <service android:name="service.ClockService"/>
+    </application>
 
 </manifest>
