--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/station"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -26,7 +26,6 @@
         <activity
             android:name="activity.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <service android:name="service.ClockService"/>
     </application>
 
