--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'it.neokree:MaterialTabs:0.11'
+    compile files('libs/volley.jar')
 }
